Fixed sidebar link cut off issue

--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
 section#welcome {
     position: relative;
     top: 100px;
-    left: 60px;
+    left: 70px;
 }
 
 section#projects {
     position: relative;
     top: 100px;
-    left: 60px;
+    left: 70px;
 }
 
 section#contact {
@@ -100,7 +100,7 @@ nav {
 footer {
     position: absolute;
     bottom: 10px;
-    left: 60px;
+    left: 70px;
 }
 
 a:link {
